--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -66,6 +66,7 @@
 \usepackage{booktabs} % For professional quality tables
 \usepackage{array}    % For better column alignment
 \usepackage{tikz}
+\usepackage{pgfkeys}
 %% The lineno packages adds line numbers. Start line numbering with
 %% \begin{linenumbers}, end it with \end{linenumbers}. Or switch it on
 %% for the whole article with \linenumbers.
