--- a/papers/actor-based-large-neighborhood-search/tex/results.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/results.tex
@@ -51,7 +51,7 @@ value \ref{eqn:objective:strategic} shows a small spike and then quickly converg
 
 \begin{figure}[H]
 	\centering
-	\resizebox{\linewidth}{!}{
+	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_inclusion_plot.tex}
 	}
 	\caption{Effects of pertubing the solution by forcing work orders into specific periods.}
@@ -95,7 +95,7 @@ after a pertubation as given in table~\ref{tab:responses:exclusion}.
 
 \begin{figure}[H]
 	\centering
-	\resizebox{\linewidth}{!}{
+	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_exclusion_plot.tex}
 	}
 	\caption{Figure Caption}
@@ -136,7 +136,7 @@ maximum value.
 
 \begin{figure}[H]%% placement specifier
 	\centering
-	\resizebox{\linewidth}{!}{
+	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_resource_addition_plot.tex}
 	}
 	\caption{Figure Caption}
@@ -165,7 +165,7 @@ capacity.
 
 \begin{figure}[H]%% placement specifier
 	\centering
-	\resizebox{\linewidth}{!}{
+	\resizebox{10cm}{!}{
 		\input{figures/strategic_objective_value_resource_subtraction_plot.tex}
 	}
 	\caption{Figure Caption}
@@ -199,7 +199,7 @@ work order to a specific period.
 
 \begin{figure}[H]%% placement specifier
 	\centering
-	\definecolor{gp lt color}{named}{dtu-red}
+	\definecolor{gp lt10cm}{named}{dtu-red}
 	\resizebox{\linewidth}{!}{
 		\input{figures/strategic_objective_value_weight_change_plot.tex}
 	}
