--- a/presentations/operation-research-seminar/main.tex
+++ b/presentations/operation-research-seminar/main.tex
@@ -206,6 +206,7 @@
 
 \begin{frame}{}
     \begin{block}{Business}
+		\input{../../figures/maintenance_actor_architecture.tex}
 		% Business usually handle decision making by making a series of "model changes" which 
 		% are then combined to create a decision process.
   %       \begin{enumerate}
