--- a/tex/models/strategic.tex
+++ b/tex/models/strategic.tex
@@ -1,22 +1,42 @@
-\begin{alignat}{2}
-	& \text{\rule{\linewidth}{0.4pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
-	& \textbf{Meta variables:} \notag                                                                                                                                                                                                                                                                                                                                                \\ 
-	& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                                                                                                           \label{eqn:meta:scheduler:strategic}  \\ 
-	& \VarTacticalWork{}{}                                                                                                                                                                                                                                                                                                                                                          \label{eqn:meta:tactical:strategic}      \\ 
-	& \tau \in [0, \infty]                                                                                                                                                                                                                                                                                                                                                          \label{eqn:meta:time:strategic}                                     \\ 
-	& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                              \\
-	& \textbf{Maximize:} \notag                                                                                                                                                                                                                                                                                                                                                     \label{eqn:objective:strategic}                                     \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag                                                                                                                                                                                                                             \\ 
-	& - \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess     \notag                                                                                                                                                                                                                                                                          \\
-	& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} 	 \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}                                                                                             \\
-	& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                                                             \\
-	& \textbf{Subject to:} \notag                                                                                                                                                                                                                                                                                                                                                                                        \\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \leq \ \ParStrategicResource + \VarStrategicExcess  \notag\\
-	& \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                \label{eqn:strategic:constraint:resource}\\
-	& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1              \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                                                               \label{eqn:constraint:strategic:schedule_once}\\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 0                                                            \quad if\quad \ParStrategicExclude \ \ \forall \ElementWorkOrder \in \SetWorkOrder{}\quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                              \label{eqn:constraint:strategic:include}\\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1                                                            \quad if\quad \ParStrategicInclude \ \ \forall \ElementWorkOrder \in \SetWorkOrder{}\quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                              \label{eqn:strategic:constraint:exclude}\\
-	& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \in \{0, 1\}                                                   \quad \forall \ElementWorkOrder \in \SetWorkOrder{} \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                           \label{eqn:variable:strategic:assignment}      \\ 
-	& \VarStrategicExcess \in \mathbb{R}^{+}                                                                                             \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                                                                                                               \label{eqn:variable:strateigc:penalty}\\ 
-	& \text{\rule{\linewidth}{0.4pt}} \notag
-\end{alignat}
+\newif\ifincludeclustering
+\newif\ifincludebeta
+
+\pgfkeys{
+	/strategicmodel/.is family, /strategicmodel,
+	default/.style = {
+		clustering=true,
+		beta=true
+	},
+	clustering/.is if=includeclustering,
+	beta/.is if=includebeta
+}
+\newcommand{\strategicmodel}[1][]{
+	\pgfkeys{/strategicmodel, default, #1}
+	\begin{alignat}{2}
+		& \text{\rule{\linewidth}{0.4pt}} \notag \label{}                                                                                                                                                                                                                                                                                                                                                                     \\ 
+		& \textbf{Meta variables:} \notag                                                                                                                                                                                                                                                                                                                                                \\ 
+		& \ElementScheduler \in \SetScheduler                                                                                                                                                                                                                                                                                                                                           \label{eqn:meta:scheduler:strategic}  \\ 
+		& \VarTacticalWork{}{}                                                                                                                                                                                                                                                                                                                                                          \label{eqn:meta:tactical:strategic}      \\ 
+		& \tau \in [0, \infty]                                                                                                                                                                                                                                                                                                                                                          \label{eqn:meta:time:strategic}                                     \\ 
+		& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                              \\
+		& \textbf{Maximize:} \notag                                                                                                                                                                                                                                                                                                                                                     \label{eqn:objective:strategic}                                     \\
+		\ifincludeclustering
+		& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag                                                                                                                                                                                                                             \\ 
+		& - \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess     \notag                                                                                                                                                                                                                                                                          \\
+		& + \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementWorkOrder1 \in \SetWorkOrder{}} \sum_{\ElementWorkOrder2 \in \SetWorkOrder{}} 	 \quad \ParClusteringValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder1}{\ElementPeriod} \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder2}{\ElementPeriod}                                                                                             \\
+		\else
+		& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \sum_{\ElementPeriod \in \SetPeriod} \ParStrategicValue \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod}  \notag                                                                                                                                                                                                                             \\ 
+		& - \sum_{\ElementPeriod \in \SetPeriod} \sum_{\ElementResource \in \SetResource} \ParStrategicPenalty \cdot \VarStrategicExcess                                                                                                                                                                                                                                                                               \\
+		\fi
+		& \text{\rule{\linewidth}{0.4pt}} \notag                                                                                                                                                                                                                                                                                                                                                                             \\
+		& \textbf{Subject to:} \notag                                                                                                                                                                                                                                                                                                                                                                                        \\
+		& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \ParStrategicWorkOrderWeight \cdot \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \leq \ \ParStrategicResource + \VarStrategicExcess  \notag\\
+		& \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                \label{eqn:strategic:constraint:resource}\\
+		& \sum_{\ElementWorkOrder \in \SetWorkOrder{}} \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1              \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                                                               \label{eqn:constraint:strategic:schedule_once}\\
+		& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 0,                                                     \quad if\quad \ParStrategicExclude \ \ \forall \ElementWorkOrder \in \SetWorkOrder{}\quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                              \label{eqn:constraint:strategic:include}\\
+		& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} = 1,                                                            \quad if\quad \ParStrategicInclude \ \ \forall \ElementWorkOrder \in \SetWorkOrder{}\quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                                              \label{eqn:strategic:constraint:exclude}\\
+		& \VarStrategicWorkOrderAssignment{\ElementWorkOrder}{\ElementPeriod} \in \{0, 1\}                                                   \quad \forall \ElementWorkOrder \in \SetWorkOrder{} \quad \forall \ElementPeriod \in \SetPeriod                                                                                                                                                                           \label{eqn:variable:strategic:assignment}      \\ 
+		& \VarStrategicExcess \in \mathbb{R}^{+}                                                                                             \quad \forall \ElementPeriod \in \SetPeriod \quad \forall \ElementResource \in \SetResource                                                                                                                                                                               \label{eqn:variable:strateigc:penalty}\\ 
+		& \text{\rule{\linewidth}{0.4pt}} \notag
+	\end{alignat}
+}
