--- a/papers/actor-based-large-neighborhood-search/tex/introduction.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/introduction.tex
@@ -1,6 +1,6 @@
 \section{Introduction}
-Maintenance scheduling is part of a class of operational problems that have proven hard to solve in practice (NP-hard~\citep{garey1979computers}).
-% TODO, reformulate
+Maintenance scheduling is part of a class of operational problems that have proven hard to solve in practice as they
+are usually modelled as resource-constrained project scheduling problems, knapsack formulations, machine scheduling problems, etc. (NP-hard~\citep{garey1979computers}).
 Furthermore, for optimization to be useful in dynamic and uncertain environments where maintenance scheduling
 is performed requires tight integration into existing IT infrastructure to allow the tacit knowledge of decision makers to easily influence
 the planning process. Often a number of different decision makers at different company levels take part in the
@@ -39,7 +39,6 @@ problems \citep{gendreauHandbookMetaheuristics2019}.
 
 To understand the need for actor-based methods some
 background knowledge will be required about the maintenance scheduling process.
-% FIX: Make a tikz figure here
 Figure~\ref{fig:integrated:maintenance-process} illustrates the general setup
 of a maintenance planning and scheduling system. The system's actors
 have the following responsibilities: the planner generates the work orders that
@@ -63,11 +62,16 @@ during planning or execution, work orders are rescheduled by moving between
 the different actors, meaning that the stochastic elements of maintenance
 scheduling are handled by \textbf{dynamic rescheduling between the actors}.
 
-% FIX: Make a tikz figure.
 \begin{figure}
-	\input{../../figures/maintenance_actor_architecture.tex}
+	\begin{center}
+	\centering
+	\resizebox{15cm}{!}{
+		\input{../../figures/maintenance_actor_architecture.tex}
+	}
 	\caption{Simple overview of the scheduling process with its primary types of actors. The planner, the scheduler, the supervisor(s), and the technicians.
 		The green color highlights the scheduler as it the actor in the maintenance scheduling process that is the foundation for the paper.}
+	\label{fig:integrated:maintenance-process}
+	\end{center}
 \end{figure}
 
 
@@ -77,7 +81,6 @@ This article has the following contribution:
 \end{itemize}
 
 The paper is divided into four different sections. Section \ref{sec:2-solution-method} explains the weekly maintenance scheduling model in detail and forms the foundation of the paper. Section \ref{sec:3-results} shows the results coming from the implemented metaheuristic where it will be affected by simulated user-interaction. Section \ref{sec:4-discussion} will discuss the implications of the research and set a future research direction.
-% DEBUG: What is tau her
 \subsection{The Weekly (Period) Maintenance Scheduling Model}
 The weekly maintenance scheduling model for the problem
 is a variant of the  Multi-compartment Multi-knapsack Problem with capacity penalties MCMKP.
@@ -91,7 +94,7 @@ the next $\ElementPeriod \in \SetPeriod$ period. The weekly schedule is created
 centrally and consists of scheduling the $\ElementWorkOrder \in \SetWorkOrder$
 work orders, i.e. maintenance tasks, such that all $\ElementWorkOrder$
 are scheduled into a specific period $\ElementPeriod$. Each work order $
-	\ElementWorkOrder$ requires some resources $\ElementResource \in \SetResource$
+\ElementWorkOrder$ requires some resources $\ElementResource \in \SetResource$
 to be carried out, e.g. man-power with different qualifications. Each of these
 resources are available in limited amounts given by $\ParStrategicResource$. To correct
 for possible manual interventions that can make the problem infeasible a penalty (
@@ -104,13 +107,11 @@ decresing value the further out the period $\ElementPeriod$ becomes.
 Furthermore, two sets exists which will either require work order $\ElementWorkOrder$ to be carried
 out in period $\ElementPeriod$ or not carried out in a period $\ElementPeriod$.
 These sets are $(\ElementWorkOrder,\ElementPeriod) \in
-	\ParStrategicInclude$ for inclusion and  $(\ElementWorkOrder, \ElementPeriod) \in
-	\ParStrategicExclude$ for exclusion.
+\ParStrategicInclude$ for inclusion and  $(\ElementWorkOrder, \ElementPeriod) \in
+\ParStrategicExclude$ for exclusion.
 
-% TODO: Explain the metavariables.
-% TODO: Format the model correctly.
-% TODO: Use pgfkeys to conditionally compile the document.
 \input{../../tex/models/strategic.tex}
+\strategicmodel
 
 The meta variables defines the broader setting that the model in implemented in.
 Equation~\eqref{eqn:meta:scheduler:strategic} specicies that the model is
