--- a/papers/actor-based-large-neighborhood-search/tex/introduction.tex
+++ b/papers/actor-based-large-neighborhood-search/tex/introduction.tex
@@ -111,7 +111,7 @@ These sets are $(\ElementWorkOrder,\ElementPeriod) \in
 \ParStrategicExclude$ for exclusion.
 
 \input{../../tex/models/strategic.tex}
-\strategicmodel
+\strategicmodel[clustering=false]
 
 The meta variables defines the broader setting that the model in implemented in.
 Equation~\eqref{eqn:meta:scheduler:strategic} specicies that the model is
