Made the document overleaf compatible

--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -204,11 +204,11 @@ Large Neighborhood Search
 \end{keyword}
 
 \end{frontmatter}
-\input{tex/introduction.tex}
-\input{tex/solution_method.tex}
-\input{tex/results.tex}
-\input{tex/case_study.tex}
-\input{tex/discussion.tex}
+\input{../actor-based-large-neighborhood-search/tex/introduction.tex}
+\input{../actor-based-large-neighborhood-search/tex/solution_method.tex}
+\input{../actor-based-large-neighborhood-search/tex/results.tex}
+\input{../actor-based-large-neighborhood-search/tex/case_study.tex}
+\input{../actor-based-large-neighborhood-search/tex/discussion.tex}
 
 \bibliography{refs}
 
