--- a/papers/actor-based-large-neighborhood-search/main.tex
+++ b/papers/actor-based-large-neighborhood-search/main.tex
@@ -30,6 +30,7 @@
 %% \documentclass[final,5p,times,authoryear]{elsarticle}
 %% \documentclass[final,5p,times,twocolumn,authoryear]{elsarticle}
 
+\usepackage{standalone}
 \usepackage{pgf}
 \usepackage{pgfkeys}
 \usepackage{gnuplottex}
