--- a/memos/total-energies/2024-12-13-brian-and-valentin/main.tex
+++ b/memos/total-energies/2024-12-13-brian-and-valentin/main.tex
@@ -1,4 +1,5 @@
 \documentclass[11pt]{article}
+\usepackage[subpreambles=true]{standalone}
 \usepackage[utf8]{inputenc}
 \usepackage{algorithmicx}
 \usepackage{algorithm}
@@ -19,6 +20,7 @@
 \usepackage{pifont}
 \usepackage{pgfkeys}
 \usepackage{tikz}
+\usepackage{import}
 % \usepackage{titlesec}
 \setcounter{secnumdepth}{3}
 \input{../../../tex/definitions.tex}
